2006-11-11  Stipe Tolj  <stolj at kannel.org>
    * gw/bb_alog.c: also add octstr_convert_printable() if custom access-log
      formating is used.

2006-11-10  Stipe Tolj  <stolj at kannel.org>
    * gwlib/octstr.[ch]: adding function octstr_convert_printable() to allow
      a simple convertion for an Ocstr to be printed in a printable locale
      character set. Converts and non-printbale char to '.', as octstr_dump()
      does.
    * gw/bb_alog.c: ensure in bb_alog_sms() that we use octstr_convert_printable()
      before calling alog() for DC_7BIT messages that still may contain control
      sequences and hence break the "one-line-per-entry" rule.      

2006-11-03 Alexander Malysh <amalysh at kannel.org>
    * gw/bb_boxc.c: fixed message of order issue when we retry to deliver
      to smsbox. Thanks to Ben Suffolk <ben at vanilla.net> for the patch.
      [Msg-Id: <C1DA6177-EA8E-458A-9BE7-B329DEC793C3@vanilla.net>]

2006-10-31 Alexander Malysh <amalysh at kannel.org>
    * gwlib/conn.c, gwlib/http.c: fixed race condition in
      unregister/callback usage/destroy of callback data. The race is
      as follow, spotted with help of http.c:
	1 Thread				2 Thread
      1) http:conn_pool_get			1) http:check_pool_conn
      2) conn = XYZ
      3) conn_unregister
		in conn_unregister
		destroy callbackdata
						2) dict_get(conn_pool, key) -> crash
                                                   because connback data already destroyed

2006-10-26 Alexander Malysh <amalysh at kannel.org>
    * gwlib/http.c: security bug fix for http.c. We have issue when we
      use keep alive connections with our connection pool. This is scenario
      without a patch:
          1) http_start_request(..., ssl=0,certkeyfile=NULL,our_host=NULL)
          2) http_start_request(..., ssl=1,certkeyfile=XYZ,our_host=XYZ)
      in (2) we will get from conn_pool_get connection from (1)!

2006-10-13  Stipe Tolj  <stolj at kannel.org>