@@ -349,11 +349,12 @@ static long convert_addr_from_pdu(Octstr *id, Octstr *addr, long ton, long npi, 
          *   2) the whole source addr consist of digits, exception '+' in front
          */
         if (octstr_len(addr) < 7) {
-            error(0, "SMPP[%s]: Mallformed addr `%s', expected at least 7 digits. ",
+            /* We consider this as a "non-hard" condition, since there "may"
+             * be international numbers routable that are < 7 digits. Think
+             * of 2 digit country code + 3 digit emergency code. */
+            warning(0, "SMPP[%s]: Mallformed addr `%s', generally expected at least 7 digits. ",
                      octstr_get_cstr(id),
                      octstr_get_cstr(addr));
-            reason = SMPP_ESME_RINVSRCADR;
-            goto error;
         } else if (octstr_get_char(addr, 0) == '+' &&
                    !octstr_check_range(addr, 1, 256, gw_isdigit)) {
             error(0, "SMPP[%s]: Mallformed addr `%s', expected all digits. ",
